1.0.0/_sources/developers_guide/ocean/generated/polaris.ocean.convergence.forward.ConvergenceForward.rst.txt
polaris.ocean.convergence.forward.ConvergenceForward
====================================================

.. currentmodule:: polaris.ocean.convergence.forward

.. autoclass:: ConvergenceForward

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~ConvergenceForward.__init__
      ~ConvergenceForward.add_dependency
      ~ConvergenceForward.add_horiz_mesh_input_file
      ~ConvergenceForward.add_init_input_file
      ~ConvergenceForward.add_input_file
      ~ConvergenceForward.add_model_config_options
      ~ConvergenceForward.add_namelist_file
      ~ConvergenceForward.add_output_file
      ~ConvergenceForward.add_streams_file
      ~ConvergenceForward.add_vert_coord_input_file
      ~ConvergenceForward.add_yaml_file
      ~ConvergenceForward.check_properties
      ~ConvergenceForward.compute_cell_count
      ~ConvergenceForward.constrain_resources
      ~ConvergenceForward.dynamic_model_config
      ~ConvergenceForward.get_horiz_mesh_filename
      ~ConvergenceForward.get_init_filename
      ~ConvergenceForward.get_vert_coord_filename
      ~ConvergenceForward.map_yaml_configs
      ~ConvergenceForward.map_yaml_options
      ~ConvergenceForward.map_yaml_streams
      ~ConvergenceForward.map_yaml_to_namelist
      ~ConvergenceForward.partition
      ~ConvergenceForward.process_inputs_and_outputs
      ~ConvergenceForward.run
      ~ConvergenceForward.runtime_setup
      ~ConvergenceForward.set_model_resources
      ~ConvergenceForward.set_resources
      ~ConvergenceForward.set_shared_config
      ~ConvergenceForward.setup
      ~ConvergenceForward.update_io_tasks_config
      ~ConvergenceForward.update_namelist_eos
      ~ConvergenceForward.update_namelist_pio
      ~ConvergenceForward.validate_baselines
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~ConvergenceForward.component
      ~ConvergenceForward.config
      ~ConvergenceForward.input_data
   
   